--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "module-simple-todos-react",
   "version": "1.0.0",
   "description": "todos",
+  "scripts": {
+    "lint": "eslint --ext js,jsx ."
+  },
   "dependencies": {
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
@@ -9,5 +12,10 @@
     "react-router": "^2.0.0-rc5"
   },
   "author": "Evan You",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "babel-eslint": "^4.1.8",
+    "eslint": "^1.10.3",
+    "eslint-plugin-react": "^3.16.1"
+  }
 }
