--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "react": "^0.14.7",
+    "react-addons-pure-render-mixin": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-komposer": "^1.3.0",
     "react-router": "^2.0.0-rc5"
