--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "lint": "eslint --ext js,jsx ."
   },
   "dependencies": {
+    "classnames": "^2.2.3",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-komposer": "^1.3.0",
