tweak lint rules

--- a/.eslintrc
+++ b/.eslintrc
@@ -13,9 +13,10 @@
   "rules": {
     // allow pure function components to be capitalized
     "new-cap": 0,
-    // common for pure function components to be wrapped
-    // in parens
+    // common for pure function components to be wrapped in parens
     "no-extra-parens": 0,
+    // common for conditional render functions
+    "no-else-return": 0,
 
     /**
      * React specific
@@ -24,15 +25,15 @@
     "react/display-name": [1, { "acceptTranspilerName": true }],
     "react/forbid-prop-types": 0,
     "react/jsx-boolean-value": 1,
-    "react/jsx-closing-bracket-location": 1,
+    "react/jsx-closing-bracket-location": 0,
     "react/jsx-curly-spacing": 1,
     "react/jsx-equals-spacing": 1,
     "react/jsx-handler-names": 1,
-    "react/jsx-indent-props": 1,
+    "react/jsx-indent-props": 0,
     "react/jsx-indent": 0,
     "react/jsx-key": 1,
     "react/jsx-max-props-per-line": 0,
-    "react/jsx-no-bind": 1,
+    "react/jsx-no-bind": 0,
     "react/jsx-no-duplicate-props": 1,
     "react/jsx-no-literals": 0,
     "react/jsx-no-undef": 1,
@@ -52,7 +53,7 @@
     "react/no-string-refs": 1,
     "react/no-unknown-property": 1,
     "react/prefer-es6-class": 1,
-    "react/prop-types": 1,
+    "react/prop-types": 0,
     "react/react-in-jsx-scope": 1,
     "react/require-extension": 1,
     "react/self-closing-comp": 1,
