--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-komposer": "^1.3.0",
-    "react-router": "^2.0.0-rc5"
+    "react-router": "^2.0.0"
   },
   "author": "Evan You",
   "license": "MIT",
