--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "classnames": "^2.2.3",
     "react": "^0.14.7",
+    "react-addons-css-transition-group": "^0.14.7",
+    "react-addons-pure-render-mixin": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-komposer": "^1.3.0",
     "react-router": "^2.0.0"
